cmake_minimum_required(VERSION 3.22)
project(acwing)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD 20)

add_executable(acwing main.cpp)
add_executable(quick_sort quick_sort.cpp)
add_executable(merge_sort merge_sort.cpp)
add_executable(findKth findKth.cpp)
add_executable(reverse_pair reverse_pair.cpp)
add_executable(num_range num_range.cpp)
add_executable(cubic_root cubic_root.cpp)
add_executable(high_precision_add high_precision_add.cpp)
add_executable(high_precison_sub high_precison_sub.cpp)
add_executable(high_precision_mul high_precision_mul.cpp)
add_executable(high_precision_div high_precision_div.cpp)
add_executable(prefix_sum1 prefix_sum1.cpp)
add_executable(sum_of_submatrices sum_of_submatrices.cpp)
add_executable(test test.cpp)
add_executable(difference difference.cpp)
add_executable(difference_matrix difference_matrix.cpp)
add_executable(length_of_longest_sequence length_of_longest_sequence.cpp)
add_executable(sum_of_target sum_of_target.cpp)
add_executable(binary_of_kth binary_of_kth.cpp)
add_executable(lowbit lowbit.cpp)
add_executable(sum_of_interval sum_of_interval.cpp)
add_executable(cmp_subsequence cmp_subsequence.cpp)
add_executable(interval_merge interval_merge.cpp)
add_executable(static_linklist static_linklist.cpp)
add_executable(static_doubly_linklist static_doubly_linklist.cpp)
add_executable(stack stack.cpp)
add_executable(expression_evaluation expression_evaluation.cpp)
add_executable(queue queue.cpp)
add_executable(monotonic_stack monotonic_stack.cpp)
add_executable(monotonic_queue monotonic_queue.cpp)
add_executable(kmp kmp.cpp)
add_executable(string_count string_count.cpp)
add_executable(max_xor max_xor.cpp)
add_executable(union_find_sets union_find_sets.cpp)
add_executable(points_in_connected_block points_in_connected_block.cpp)
add_executable(food_chain food_chain.cpp)
add_executable(food_chain_2 food_chain_2.cpp)
add_executable(heap_sort heap_sort.cpp)
add_executable(simulation_heap simulation_heap.cpp)
add_executable(hash_table_1 hash_table_1.cpp)
add_executable(hash_table_2 hash_table_2.cpp)
add_executable(string_hash string_hash.cpp)
add_executable(full_permutation full_permutation.cpp)
add_executable(n_queen n_queen.cpp)
add_executable(n_queen_2 n_queen_2.cpp)
add_executable(walk_maze walk_maze.cpp)
add_executable(walk_maze_path walk_maze_path.cpp)
add_executable(eight_digital eight_digital.cpp)
add_executable(gravity_tree gravity_tree.cpp)
add_executable(graph_level graph_level.cpp)
add_executable(topological_sort topological_sort.cpp)
add_executable(dijkstra dijkstra.cpp)
add_executable(dijkstra_heap dijkstra_heap.cpp)
add_executable(bellman_ford bellman_ford.cpp)
add_executable(spfa spfa.cpp)
add_executable(spfa_jg_nring spfa_jg_nring.cpp)
add_executable(floyd floyd.cpp)
add_executable(prim prim.cpp)
add_executable(prim_heap prim_heap.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(jg_bipartite_graph jg_bipartite_graph.cpp)
add_executable(hungarian hungarian.cpp)

